--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -20,12 +20,14 @@ scratch_dict = {
     # kaiju classification 
     "classified_kaiju_read_output": scratch_dir / "classified_kaiju_read_output",
 
-    # binning of classified reads 
-    "read_binning": {
-        # dir of sample directories containing files of header names for each clade
-        "binned_headers": scratch_dir / "read_binning" / "binned_headers", 
-        # dir of sample directories containing files of extracted reads for each clade
-        "binned_reads": scratch_dir / "read_binning" /"binned_reads",
+    # Classified Pro Syn reads
+    "prosyn_reads": {
+        # dir of read name classified as Pro or Syn 
+        "read_name": scratch_dir / "prosyn_reads" / "read_name", 
+        # dir of read name classified as Pro or Syn along with their full taxonomic classification 
+        "read_name_classification": scratch_dir / "prosyn_reads" / "read_name_classification", 
+        # dir of extracted fastq sequences of Pro/Syn reads
+        "extracted_reads": scratch_dir / "prosyn_reads" / "extracted_reads", 
     }, 
 
     # diamond blast binned reads 
@@ -56,7 +58,7 @@ rule all:
 ##### Define the Rules that are used in this pipeline #####
 include: "rules/trim_reads.smk"
 include: "rules/run_kaiju.smk"
-include: "rules/bin_reads.smk"
+include: "rules/extract_reads.smk"
 include: "rules/blast_reads.smk"
 include: "rules/normalize_reads.smk"
 include: "rules/aggregate_results.smk"
