--- a/inputs/config.yaml
+++ b/inputs/config.yaml
@@ -1,17 +1,18 @@
-experiment_name: test_snakemake_cleanup
+experiment_name: read_classification
 
 input: 
   sample table: inputs/samples.tsv
   adapter_file: inputs/all_illumina_adapters.fa
+  cycog_file: inputs/cycog_len.tsv
   nodes_file: /pool001/jmullet/gorgcycogamz20230927/updated_GORG_work/final_database_files/final_ncbi_pro_nodes.dmp
   names_file: /pool001/jmullet/gorgcycogamz20230927/updated_GORG_work/final_database_files/final_ncbi_pro_names.dmp
   fmi_file: /pool001/jmullet/gorgcycogamz20230927/updated_GORG_work/final_database_files/final_MARMICRODB2_virus.fmi
   diamond_file: /pool001/jmullet/blast/cycog6/CyCOG6.dmnd
-  cycog_file: inputs/cycog_len.tsv
+  
 
 classification_summary:
-  # list of genus to extract read count for (remaining genus will be summed)
+  # list of genus to extract read count for (remaining genus will be summed into "other_genus")
   genus_list: ['Synechococcus', 'Prochlorococcus', 'unclassified']
 
-scratch directory: /nobackup1b/users/chisholmlab/nvo/Bioinfo/24_updated_GORG_AMZ_classifier/snakemake_cleanup/AllPro_90pcnthets_1M_scratch
+scratch directory: scratch
 results directory: results
